# terminal-multiplayer-game

./: .gitignore  README.md
client/: pyproject.toml
client/client/: main.py
client/game/: game.py
server/: Cargo.toml
server/src/: main.rs
